--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
       </a-assets>
       
       <!-- マーカー状に描画するやつを指定 -->
-      <a-marker preset="hiro">
+      <a-marker type='pattern' url='./marker/hanittan-marker.patt'>
         <a-obj-model id="sample" src="#hanittan-obj" mtl="#hanittan-mtl" position="0 0 0" scale="0.1 0.1 0.1" rotation="0 0 0"></a-obj-model>
         <a-text value="HANITTAN IS HERE!!!" position="0 1.3 0" align="center"></a-text>
       </a-marker>
