--- a/main.html
+++ b/main.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <!-- A-Frame ライブラリの読み込み -->
-    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     
     <!-- AR.js ライブラリの読み込み -->
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.0/aframe/build/aframe-ar.js"></script>
   </head>
   <body style='margin:0px; overflow:hidden;'>
     
