change align of text

--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
       <!-- マーカー状に描画するやつを指定 -->
       <a-marker type='pattern' url='./marker/pattern-First.patt'>
         <a-obj-model id="sample" src="#hanittan-obj" mtl="#hanittan-mtl" position="0 0 0" scale="0.1 0.1 0.1" rotation="-90 0 0"></a-obj-model>
-        <a-text value="HANITTAN IS HERE!!!" position="0 1 0" rotation="-90 0 0" color="#111111"></a-text>
+        <a-text value="HANITTAN IS HERE!!!" position="0 1 0" rotation="-90 0 0" color="#111111" align="center"></a-text>
       </a-marker>
       
       <!-- カメラ -->
