--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=10.0, user-scalable=yes">
     <meta name="apple-mobile-web-app-capable" content="no">
-    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="apple-touch-icon" href="img/icon.png">
     
   </head>
   <body>
