--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div id = "howto">
       <span class="box-title">あそびかた</span>
       <p>
-	学内に潜む"情" "報" "科" "学"のマーカーに<br />
-	専用のARカメラをかざすとキーワードが出現します。<br />
+	学内の4箇所にあるマーカーに<br />
+	ページ下部から起動できる専用のARカメラをかざすとキーワードが出現します。<br />
 	<br />
-	それを以下の四角の順番に並べ替えると文章になります。<br />
+	それを以下の四角の順番に並べ替えるとある言葉になります。<br />
       </p>
     
       <div id="img">
@@ -29,11 +29,13 @@
 
       <p>
 	全部集まったら<br />
-	答えを7号館2階の7201教室(→地図)の情報科学科スタッフに伝えましょう。<br />
+	7号館2階の7201教室の情報科学科スタッフに答えを伝えましょう。<br />
 	<br />
 	正解したら素敵な景品をプレゼント！<br />
 	<br />
-	質問等ございましたら情報科学科スタッフまでお声がけください。<br />
+	マーカーの場所はページ下部の地図ボタンから確認できます。<br />
+	<br />
+	質問等ございましたらお気軽に、情報科学科スタッフまでお声がけください。<br />
       </p>
     </div>
 
@@ -53,7 +55,14 @@
       </p>
     </div>
     <div id="img">
-      <a href = "main.html"><img src = "img/camera.png" /></a>
+      <a href = "map.html">
+	  <img src = "img/map_button.png" />
+      </a>
+    </div>
+    <div id="img">
+      <a href = "main.html">
+	  <img src = "img/camera.png" />
+      </a>
     </div>
   </body>
 </html>
