--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 	学内の4箇所にあるマーカーに<br />
 	ページ下部から起動できる専用のARカメラをかざすとキーワードが出現します。<br />
 	<br />
-	それを以下の四角の順番に並べ替えるとある言葉になります。<br />
+	それを以下の四角の順番に並べ替えるとある文章になります。<br />
       </p>
     
       <div id="img">
 	<img src = "img/question.png" />
       </div>
-
+      <br />
       <p>
 	全部集まったら<br />
-	7号館2階の7201教室の情報科学科スタッフに答えを伝えましょう。<br />
+	7号館2階の7201教室もしくは7202教室の情報科学科スタッフに答えを伝えてください。<br />
 	<br />
-	正解したら素敵な景品をプレゼント！<br />
+	正解した方には素敵な景品をプレゼント！<br />
 	<br />
 	マーカーの場所はページ下部の地図ボタンから確認できます。<br />
 	<br />
