--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	学内の4箇所にあるマーカーに<br />
 	ページ下部から起動できる専用のARカメラをかざすとキーワードが出現します。<br />
 	<br />
-	それを以下の四角の順番に並べ替えるとある文章になります。<br />
+	それを以下の順番に並べ替えるとある文章になります。<br />
       </p>
     
       <div id="img">
