--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <br />
       <p>
 	全部集まったら<br />
-	7号館2階の7201教室もしくは7202教室の情報科学科スタッフに答えを伝えてください。<br />
+	7号館2階の7202教室の情報科学科スタッフに答えを伝えてください。<br />
 	<br />
 	正解した方には素敵な景品をプレゼント！<br />
 	<br />
