update map page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </p>
       <p>
 	<font color = "red">
-	  一部対応していない端末がございます。<br />
+	  一部対応していない端末・ブラウザがございます。<br />
 	  あらかじめご了承ください。<br />
 	</font>
       </p>
