--- a/map.html
+++ b/map.html
@@ -19,6 +19,23 @@
     </div>
 
     <div>
+      <p>
+	[本館3階]<br />
+	情報科学科(プロジェクションマッピング班)前<br />
+	<br />
+	[7号館2階]<br />
+	情報化学科有志団体VRブース<br />
+	<br />
+	[南館1階]<br />
+	TsudaFab(s102)扉前<br />
+	<br />
+	[食堂(記念館)]<br />
+	食堂前掲示板<br />
+	<br />
+      </p>
+    </div>
+    
+    <div>
       <a href = "index.html">
 	<img src = "img/back.png" />
       </a>
