update some pages

--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
     <div id="howto">
       <span class="box-title">注意</span>
       <p>
+	カメラを起動する際、<br />
+	「カメラへのアクセスを求めています」というダイアログが出ることがあります。<br />
+	「許可」を選択してください。<br />
+	<br />
 	正しいキーワードが出るまでに時間がかかることがありますので、<br />
 	ARカメラはマーカーの上で数秒かざしてください。<br />
 	うまく読み取れない場合は、一旦マーカーからカメラを完全にはずし、<br />
-	再度カメラをマーカーにかざしてください。<br />
+	再度カメラをマーカーにかざしてください。<br /><br />
       </p>
       <p>
 	<font color = "red">
