--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
       
       <!-- Fourth -->
       <a-marker type='pattern' url='./marker/pattern-Fourth.patt'>
-	<a-box position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="blue"></a-box>
+	<a-obj-model id="frog" src="#fish-obj" mtl="#fish-mtl" position="0 0 0" scale="0.1 0.1 0.1" rotation="0 0 0"></a-obj-model>
 	<a-text value="Wonderful!" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#111111"></a-text>
       </a-marker>
       
