--- a/main.html
+++ b/main.html
@@ -43,25 +43,25 @@
       <!-- First/Hanittan -->
       <a-marker type='pattern' url='./marker/pattern-First.patt'>
         <a-obj-model id="hanittan" src="#hanittan-obj" mtl="#hanittan-mtl" position="0 0 0" scale="0.1 0.1 0.1" rotation="-90 0 0"></a-obj-model>
-	<a-text value="Computer" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#111111"></a-text>
+	<a-text value="Computer" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#ff4500"></a-text>
       </a-marker>
 
       <!-- Second -->
       <a-marker type='pattern' url='./marker/pattern-Second.patt'>
 	<a-obj-model id="cat" src="#cat-obj" mtl="#cat-mtl" position="0 0 0" scale="0.05 0.05 0.05" rotation="-90 0 0"></a-obj-model>
-	<a-text value="Science" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#111111"></a-text>
+	<a-text value="Science" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#ff4500"></a-text>
       </a-marker>
 
       <!-- Third -->
       <a-marker type='pattern' url='./marker/pattern-Third.patt'>
 	<a-obj-model id="frog" src="#frog-obj" mtl="#frog-mtl" position="0 0 0" scale="0.03 0.03 0.03" rotation="0 -90 90"></a-obj-model>
-	<a-text value="is" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#111111"></a-text>
+	<a-text value="is" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#ff4500"></a-text>
       </a-marker>
       
       <!-- Fourth -->
       <a-marker type='pattern' url='./marker/pattern-Fourth.patt'>
 	<a-obj-model id="frog" src="#fish-obj" mtl="#fish-mtl" position="0 0 0" scale="0.04 0.04 0.04" rotation="-90 0 0"></a-obj-model>
-	<a-text value="Wonderful!" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#111111"></a-text>
+	<a-text value="Wonderful!" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#ff4500"></a-text>
       </a-marker>
       
       <!-- カメラ -->
