--- a/map.html
+++ b/map.html
@@ -24,10 +24,10 @@
 	情報科学科(プロジェクションマッピング班)前<br />
 	<br />
 	[7号館2階]<br />
-	情報化学科有志団体VRブース<br />
+	情報化学科有志団体VR体験ブース内<br />
 	<br />
-	[南館1階]<br />
-	TsudaFab(s102)扉前<br />
+	[南館入り口]<br />
+	TsudaFabがある建物の入り口<br />
 	<br />
 	[食堂(記念館)]<br />
 	食堂前掲示板<br />
