--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <p>
 	学内の4箇所にあるマーカーに<br />
 	ページ下部から起動できる専用のARカメラをかざすとキーワードが出現します。<br />
+	(<a href="samplemarker.html">ARマーカー見本</a>)<br />
 	<br />
 	それを以下の順番に並べ替えるとある文章になります。<br />
       </p>
