--- a/main.html
+++ b/main.html
@@ -63,6 +63,12 @@
 	<a-obj-model id="frog" src="#fish-obj" mtl="#fish-mtl" position="0 0 0" scale="0.04 0.04 0.04" rotation="-90 0 0"></a-obj-model>
 	<a-text value="Wonderful!" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#ff4500"></a-text>
       </a-marker>
+
+      <!-- Sample -->
+      <a-marker type='pattern' url='./marker/pattern-sample.patt'>
+	<a-sphere scale=".25 .25 .25" position="0 .5 0" color="#111">
+	<a-text value="SAMPLE" position="0 1.3 0" rotation ="-90 0 0" align="center" color ="#ff4500"></a-text>
+      </a-marker>
       
       <!-- カメラ -->
       <a-entity camera></a-entity>
