--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	全部集まったら<br />
 	7号館2階の7202教室の情報科学科スタッフに答えを伝えてください。<br />
 	<br />
-	正解した方には素敵な景品をプレゼント！<br />
+	正解した方には素敵な賞品をプレゼント！<br />
 	<br />
 	マーカーの場所はページ下部の地図ボタンから確認できます。<br />
 	<br />
