--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <p>
 	<font color = "red">
 	  一部対応していない端末・ブラウザがございます。<br />
-	  あらかじめご了承ください。<br />
+	  未対応端末をお使いの方は、4つのARマーカーの写真を撮っていただければ、景品をお渡しします。<br />
 	</font>
       </p>
     </div>
