add bonus to index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <div id="img" class="title">
       <img src = "img/title_logo.png" />
     </div>
-
+    <div>
+      <font color = "red">
+	マーカー1つ受付にて配付中です！<br />
+	ぜひご参加ください！<br />
+	<br />
+      </font>
+    </div>
     <div id = "howto">
       <span class="box-title">あそびかた</span>
       <p>
