--- a/index.html
+++ b/index.html
@@ -13,67 +13,9 @@
     <div id="img" class="title">
       <img src = "img/title_logo.png" />
     </div>
-    <div>
-      <font color = "red">
-	マーカー1つ受付にて配付中です！<br />
-	ぜひご参加ください！<br />
-	<br />
-      </font>
-    </div>
     <div id = "howto">
-      <span class="box-title">あそびかた</span>
-      <p>
-	学内の4箇所にあるマーカーに<br />
-	ページ下部から起動できる専用のARカメラをかざすとキーワードが出現します。<br />
-	(<a href="samplemarker.html">ARマーカー見本</a>)<br />
-	<br />
-	それを以下の順番に並べ替えるとある文章になります。<br />
-      </p>
-    
-      <div id="img">
-	<img src = "img/question.png" />
-      </div>
-      <br />
-      <p>
-	全部集まったら<br />
-	7号館2階の7202教室の情報科学科スタッフに答えを伝えてください。<br />
-	<br />
-	正解した方には素敵な景品をプレゼント！<br />
-	<br />
-	マーカーの場所はページ下部の地図ボタンから確認できます。<br />
-	<br />
-	質問等ございましたらお気軽に、情報科学科スタッフまでお声がけください。<br />
-      </p>
-    </div>
-
-    <div id="howto">
-      <span class="box-title">注意</span>
-      <p>
-	カメラを起動する際、<br />
-	「カメラへのアクセスを求めています」というダイアログが出ることがあります。<br />
-	「許可」を選択してください。<br />
-	<br />
-	正しいキーワードが出るまでに時間がかかることがありますので、<br />
-	ARカメラはマーカーの上で数秒かざしてください。<br />
-	うまく読み取れない場合は、一旦マーカーからカメラを完全にはずし、<br />
-	再度カメラをマーカーにかざしてください。<br /><br />
-      </p>
-      <p>
-	<font color = "red">
-	  一部対応していない端末・ブラウザがございます。<br />
-	  未対応端末をお使いの方は、4つのARマーカーの写真を撮っていただければ、景品をお渡しします。<br />
-	</font>
-      </p>
-    </div>
-    <div id="img">
-      <a href = "map.html">
-	  <img src = "img/map_button.png" />
-      </a>
-    </div>
-    <div id="img">
-      <a href = "main.html">
-	  <img src = "img/camera.png" />
-      </a>
+      ご参加いただきありがとうございました。<br />
+      この企画は終了しました。<br />
     </div>
   </body>
 </html>
